# .config

./: .config.code-workspace  .gitignore  .p10k.zsh  .p10k.zsh.bk  .zshrc  README.md  generate_canvas.py  generate_canvas2.py  generate_canvas3.py  install-tools.sh  mcp-catalog.yaml  vscode_copilot_settings.json  zsh
.github/: copilot-instructions.md
docs/: README-install-tools.md  TODO_FUTURE.md  diffs_yabai_corrections.md  shortcuts-config.comparison.md
fabric/: fabric-bootstrap.inc  unique_patterns.txt
gemini/: google_accounts.json  projects.json  settings.json  settings.json.orig  trustedFolders.json
gentleman-trainer/: stats.json
gh/: hosts.yml
ghostty/: config
github-copilot/: versions.json
linearmouse/: linearmouse.json
lsd/: colors.yaml
mcphost/: .env.local  .mcphost.json  .mcphost.yml
neofetch/: config.conf
nvim/: README-images.md  init.lua  lazy-lock.json
opencode/: .env  config.json  mcp.json  oh-my-opencode-slim.json  package-lock.json  tui.json
oterm/: config.json
que-hace/: .gitignore  README.md  pyproject.toml  que-hace.tmux
que-hace/que_hace/: __init__.py  __main__.py  cli.py  database.py  models.py  ollama_client.py  ui.py
que-hace/que_hace/extractors/: __init__.py  base.py  nvim.py  opencode.py  skhd.py  tmux.py  yabai.py
scripts/: apply-catppuccin-lscolors.sh  test-install.sh
sketchybar/: colors.sh  sketchybarrc
skhd/: skhdrc
smassh/: smassh.json
spicetify/: auto-apply.sh  config-xpui.ini
syncthing/: cert.pem  config.xml  docker-compose.yml  https-cert.pem  https-key.pem  key.pem
tigervnc/: default.tigervnc
(+109 files in other folders)
